--- a/web/index.html
+++ b/web/index.html
@@ -42,24 +42,20 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">Project name</a>
+              <a class="navbar-brand" href="#">PITFIT</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Home</a></li>
                 <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="mailto:pichai.raman@gmail.com?Subject=PITFIT%20again" target="_top">Contact</a></li>
                 <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Tools <span class="caret"></span></a>
                   <ul class="dropdown-menu" role="menu">
-                    <li><a href="#">Action</a></li>
-                    <li><a href="#">Another action</a></li>
-                    <li><a href="#">Something else here</a></li>
-                    <li class="divider"></li>
-                    <li class="dropdown-header">Nav header</li>
-                    <li><a href="#">Separated link</a></li>
-                    <li><a href="#">One more separated link</a></li>
-                  </ul>
+                    <li><a href="#">Target Discovery Tool</a></li>
+                    <li><a href="#">Target Prioritization Tool</a></li>
+                    <li><a href="#">Target Validation Tool</a></li>
+                     </ul>
                 </li>
               </ul>
             </div>
@@ -84,19 +80,19 @@
           <img class="first-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="First slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Example headline.</h1>
-              <p>Note: If you're viewing this page via a <code>file://</code> URL, the "next" and "previous" Glyphicon buttons on the left and right might not load/display properly due to web browser security rules.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+              <h1>Target Disovery</h1>
+              <p>Bringing the power of the TCGA and modern data mining techniques to personalized medicine.</p>
+              <p><a class="btn btn-lg btn-primary" href="#targdis" role="button">Learn More</a></p>
             </div>
           </div>
         </div>
         <div class="item">
-          <img class="second-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
-          <div class="container">
+            <img class="second-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
+               <div class="container">
             <div class="carousel-caption">
-              <h1>Another example headline.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+              <h1>Target Prioritization</h1>
+              <p>Bridging the vast array of biological knowledgebases to prioritize disease relevent gene targets/</p>
+              <p><a class="btn btn-lg btn-primary" href="#targpri" role="button">Learn more</a></p>
             </div>
           </div>
         </div>
@@ -104,9 +100,9 @@
           <img class="third-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>One more for good measure.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+              <h1>Target Validation</h1>
+              <p>Using large-scale model profiling data and novel algorithms to design the best validation strategy.</p>
+              <p><a class="btn btn-lg btn-primary" href="#targval" role="button">Learn more</a></p>
             </div>
           </div>
         </div>
@@ -126,66 +122,70 @@
     ================================================== -->
     <!-- Wrap the rest of the page in another container to center all the content. -->
 
+      <h2><center><b>P</b>rioritization and <b>I</b>dentification <b>T</b>ool <b>F</b>or <b>I</b>ntelligent <b>T</b>herapeutics</center></h2>
+      <br>
     <div class="container marketing">
 
       <!-- Three columns of text below the carousel -->
       <div class="row">
         <div class="col-lg-4">
           <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <h2>Concept</h2>
+          <p>There are many known genetic lesions and oncogenic pathways that have no therapeutic avenues in cancer. This application is meant to provide a set of tools that can be used to identify & prioritize genes with oncogenic roles or correlation to oncogenic pathways that may serve as potential targets.</p>
+          <p><a class="btn btn-default" href="#" role="button">For more information about PITFIT &raquo;</a></p>
+        </div><!-- /.col-lg-4 -->
+        <div class="col-lg-4">
+            <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+                <h2>Data</h2>
+          <p>The data for PITFIT largely comes from the public arena. This application relies largely on data from the TCGA but in addition sources data from the CCLE, GTeX, and other large genomic data sets. Numerous public data sources such as Interpro, motifDB, world drug index etc... are sourced or accessed as well.</p>
+          <p><a class="btn btn-default" href="#" role="button">For a full list of data sources click here &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-          <h2>Heading</h2>
-          <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
-        <div class="col-lg-4">
-          <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+              <h2>Tech Stack</h2>
+          <p>The PITFIT application is served out via SHINY and all the base code for statistical analysis and data munging in performed with a mix of R and shell scripts. A number of Bioconductor packages are used such as motifdb, limma, and GAGE.</p>
+          <p><a class="btn btn-default" href="#" role="button">For a full list of package click here &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
 
 
       <!-- START THE FEATURETTES -->
-
       <hr class="featurette-divider">
-
+        <a name="targdis"></a>
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">Target <span class="text-muted">Discovery Tool</span></h2>
+            <p class="lead">This tool will determine a list of genes correlated or anti-correlated to the target of interest, say an oncogene, in a molecular cancer subtype. The essential inputs into this process consist of cancer genomics datasets and genetic lesions. The final output will be a list of high confidence targets that are either highly correlated or anti-correlated with the genetic lesion entered in the cancer of interest.</p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+            <img src="images/Heatmap.png" alt="Generic placeholder image" height="500" width="500" >
         </div>
       </div>
+ 
 
       <hr class="featurette-divider">
+        <a name="targpri"></a>
 
       <div class="row featurette">
         <div class="col-md-7 col-md-push-5">
-          <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <h2 class="featurette-heading">Target <span class="text-muted">Prioritization Tool</span></h2>
+          <p class="lead">This tool will help define the optimal therapy, by ranking the genes in a given gene list. In order to accomplish this, we will be examining a gene from various angles, including regulation, relevance to cancer, and cellular location. We will accomplish this by drawing on the ealther of public data sets and resources. This final output will be a score (for each therapeutic angle) that can help to rank prioritize targets for follow up.</p>
         </div>
         <div class="col-md-5 col-md-pull-7">
-          <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+            <img src="images/wordle.png" alt="Generic placeholder image" height="450" width="350" >
         </div>
       </div>
 
       <hr class="featurette-divider">
+        <a name="targval"></a>
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <h2 class="featurette-heading">Target <span class="text-muted">Validation Tool</span></h2>
+          <p class="lead">The tool will aid to suggest a putative experiment / screen to perform to validate various predictions. Experiment(s) will be suggested to determine the functional role of the targets in the cancer of interest. In cases where there are multiple targets, a screen can be suggested and a greedy approach will be adopted to construct such a multiplexed screen. The models used for the screen will be derived from the CCLE but other model sources may be available in the future. </p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+            <img src="images/KM.png" alt="Generic placeholder image" height="500" width="500" >
         </div>
       </div>
 
@@ -197,7 +197,7 @@
       <!-- FOOTER -->
       <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2014 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+        <p>&copy; 2015 PITFIT &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
       </footer>
 
     </div><!-- /.container -->
