--- a/web/index.html
+++ b/web/index.html
@@ -52,7 +52,7 @@
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Tools <span class="caret"></span></a>
                   <ul class="dropdown-menu" role="menu">
-                    <li><a href="#">Target Discovery Tool</a></li>
+                    <li><a href="TargetDiscovery">Target Discovery Tool</a></li>
                     <li><a href="#">Target Prioritization Tool</a></li>
                     <li><a href="#">Target Validation Tool</a></li>
                      </ul>
