--- a/web/index.html
+++ b/web/index.html
@@ -54,7 +54,7 @@
                   <ul class="dropdown-menu" role="menu">
                     <li><a href="TargetDiscovery">Target Discovery Tool</a></li>
                     <li><a href="TargetPrioritization">Target Prioritization Tool</a></li>
-                    <li><a href="#">Target Validation Tool</a></li>
+                    <li><a href="TargetValidation">Target Validation Tool</a></li>
                      </ul>
                 </li>
               </ul>
